// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<p
  class="emotion-0 emotion-1 emotion-2 heading"
>
  Hello world
</p>
`;

exports[`composition hook should return with Heading props 1`] = `
Object {
  "className": "css-1ntsa3h css-1pwrqjj css-is8joc heading",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 heading"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

.emotion-0 {
  font-weight: 600;
}

<h1
  class="emotion-0 emotion-1 emotion-2 test sub-heading"
>
  hello world
</h1>
`;

exports[`overrides Heading.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  background-color: red;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

.emotion-0 {
  background-color: red;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`overrides Heading.h1 should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h1.emotion-0 {
  background-color: red;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`overrides Heading.h2 should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h2.emotion-0 {
  background-color: red;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`overrides Heading.h3 should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h3.emotion-0 {
  background-color: red;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`overrides Heading.h4 should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h4.emotion-0 {
  background-color: red;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`overrides Heading.h5 should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h5.emotion-0 {
  background-color: red;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`overrides Heading.h6 should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

h6.emotion-0 {
  background-color: red;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`overrides Heading.subHeading should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

.emotion-0 {
  font-weight: 600;
}

.emotion-0 base {
  background-color: red;
}

<h1
  class="emotion-0 emotion-1 emotion-2 sub-heading"
>
  hello world
</h1>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  Hello world
</h1>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

.emotion-2.emotion-2.emotion-2 {
  color: #3722ed;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  Hello world
</h1>
`;

exports[`props should render correctly with breakpoint 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

@media screen and (min-width:769px) and (max-width:1024px) {
  .emotion-2.emotion-2.emotion-2 {
    display: none;
  }
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  Hello world
</h1>
`;

exports[`theming Heading.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

.emotion-0 {
  background-color: red;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`theming Heading.h1.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h1.emotion-0 {
  background-color: red;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`theming Heading.h2.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h2.emotion-0 {
  background-color: red;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`theming Heading.h3.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h3.emotion-0 {
  background-color: red;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`theming Heading.h4.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h4.emotion-0 {
  background-color: red;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`theming Heading.h5.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h5.emotion-0 {
  background-color: red;
}

h6.emotion-0 {
  font-size: 1rem;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`theming Heading.h6.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

h6.emotion-0 {
  background-color: red;
}

<h1
  class="emotion-0 emotion-1 emotion-2 heading"
>
  hello world
</h1>
`;

exports[`theming Heading.h6.base should render correctly 2`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  font-weight: 700;
  line-height: 1.2;
}

.heading.emotion-0 + .sub-heading {
  margin-top: -0.5em;
}

.emotion-0:not(:last-child) {
  margin-bottom: 0.25em;
}

h1.emotion-0 {
  font-size: 3rem;
}

h2.emotion-0 {
  font-size: 2.5rem;
}

h3.emotion-0 {
  font-size: 2rem;
}

h4.emotion-0 {
  font-size: 1.5rem;
}

h5.emotion-0 {
  font-size: 1.25rem;
}

h6.emotion-0 {
  font-size: 1rem;
}

.emotion-0 {
  font-weight: 600;
}

.emotion-0 base {
  background-color: red;
}

<h1
  class="emotion-0 emotion-1 emotion-2 sub-heading"
>
  hello world
</h1>
`;
